--- a/index.html
+++ b/index.html
@@ -1,58 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>MK Binance</title>
     <link rel="stylesheet" href="./css/style.css" />
-  </head>
-  <body>
-    <div class="bg-ground">
-      <div class="nav">
-        <div class="container">
-          <input type="checkbox" id="nav-check" />
-          <div class="nav-header"> 
-            <div class="nav-title">
-              <span>
-                <img
-                  src="./images/photo_2022-06-26_14-37-46-removebg-preview.png  "
-                  alt=""
-                />
-                BINANCE
-              </span>
-            </div>
-          </div>
-          <div class="nav-btn">
-            <label for="nav-check">
-              <span></span>
-              <span></span>
-              <span></span>
-            </label>
-          </div>
+    <link rel="shortcut icon" href="./images/photo_2022-06-26_14-37-46-removebg-preview.png" type="image/x-icon">
+</head>
 
-          <div class="nav-links">
-            <div class="centered">
-              <a href="#" target="_blank">Haqida</a>
-              <a href="#" target="_blank">Asoschi</a>
-              <a href="#" target="_blank">Darsliklar</a>
+<body>
+    <div class="bg-ground">
+        <div class="nav">
+            <div class="container">
+                <input type="checkbox" id="nav-check" />
+                <div class="nav-header">
+                    <div class="nav-title">
+                        <span>
+                            <img src="./images/photo_2022-06-26_14-37-46-removebg-preview.png" alt="Logo" />
+                            BINANCE
+                        </span>
+                    </div>
+                </div>
+                <div class="nav-btn">
+                    <label for="nav-check">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </label>
+                </div>
+
+                <div class="nav-links">
+                    <div class="centered">
+                        <a href="#" target="_blank">MK BINANCE</a>
+                        <a href="#" target="_blank">Asoschi</a>
+                        <a href="#" target="_blank">Darsliklar</a>
+                        <a href="#" target="_blank">Yopiq guruh</a>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-      <div class="container">
-        <div class="bg-text">
-          <h4 class="small">Biz bilan oson</h4>
-          <h1 class="big">Mk Binance</h1>
-          <h4 class="text">Uzbekiston bozoridagi yetakchi treding kampaniya</h4>
-          <button class="button-guruh">
-            Guruhga_qoshilish <img src="./images/Arrow 1.png" alt="strelik" />
-          </button>
-          <span
-            ><img src="./images/Vector.png" class="odamlar" alt="odamlar" /> 500
-            dan ortiq bolajak traderlar
-          </span>
+        <div class="container">
+            <div class="bg-text">
+                <h4 class="small">Biz bilan oson</h4>
+                <h1 class="big">Mk Binance</h1>
+                <h4 class="text">Biz sizni yuqori va tezkor daromadga yetaklaymiz!</h4>
+                <button class="button-guruh"> <a href="https://t.me/MK_SAMANDAR_MENEDJER">Qoshilish</a></button>
+                <span><img src="./images/Vector.png" class="odamlar" alt="odamlar" /> 700 dan ortiq bolajak
+                    traderlar</span>
+            </div>
         </div>
-      </div>
     </div>
-  </body>
+    <div class="container">
+        <div class="afzallik">
+            <div class="card">
+                <h2>Hamyonbop</h2>
+                <h3>Narxlar</h3>
+            </div>
+            <div class="card">
+                <h2>Sifatli</h2>
+                <h3>Darsliklar</h3>
+            </div>
+            <div class="card">
+                <h2>Organishga</h2>
+                <h3>Kafolat</h3>
+            </div>
+            <div class="card">
+                <h2>Xalq bilan</h2>
+                <h3>Birga!</h3>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="biz">
+            <h2>Bizning <br> imkoniyatlarimiz</h2>
+            <div class="cards">
+                <div class="mcard"><img src="./images/Group 289.png" alt="Trend"></div>
+                <h2>Trendlarni ko'rsatamiz</h2>
+                <p>Biz sizga aktivni tahlil qilib beramiz va bir necha taymfreymlarda savdo yo'nalishi bo'yicha
+                    tavsiyalar
+                    beramiz.</p>
+            </div>
+            <div class="cards">
+                <div class="mcard"><img src="./images/Group 290.png" alt="Stop Loss va Take Profit"></div>
+                <h2>Stop lose & Take Profit</h2>
+                <p>Biz bir necha kun davomida aktivning o'zgaruvchanligini tahlil qilib, foydani ko'paytirish va
+                    yo'qotishlarni minimallashtirish uchun Stop Loss va ko'p darajali Take profit hajmini hisoblab
+                    chiqamiz.</p>
+            </div>
+            <div class="cards">
+                <div class="mcard"><img src="./images/291.png" alt="Ozgaruvchanlik"></div>
+                <h2>O'zgaruvchanlik</h2>
+                <p>Biz aktivni tahlil qilib va o'zgaruvchanlikni foiz va ballarda ko'rsatib beramiz.</p>
+            </div>
+            <div class="cards">
+                <div class="mcard"><img src="./images/292.png" alt="Kelgusi darajalar"></div>
+                <h2>Kelgusi darajalar</h2>
+                <p>Biz aktivni tahlil qilib va 500 sham ichida keyingi ikki narx darajasini aniqlab beramiz.</p>
+            </div>
+            <div class="cards">
+                <div class="mcard"><img src="./images/293.png" alt="Tezkor Malumot"></div>
+                <h2>Tezkor ma'lumot</h2>
+                <p>Aktivning narxini dollar va bitkoinlarda ko'rsatamiz.</p>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
