--- a/index.html
+++ b/index.html
@@ -73,36 +73,39 @@
     </div>
     <div class="container">
         <div class="biz">
-            <h2>Bizning <br> imkoniyatlarimiz</h2>
-            <div class="cards">
-                <div class="mcard"><img src="./images/Group 289.png" alt="Trend"></div>
-                <h2>Trendlarni ko'rsatamiz</h2>
-                <p>Biz sizga aktivni tahlil qilib beramiz va bir necha taymfreymlarda savdo yo'nalishi bo'yicha
-                    tavsiyalar
-                    beramiz.</p>
-            </div>
-            <div class="cards">
-                <div class="mcard"><img src="./images/Group 290.png" alt="Stop Loss va Take Profit"></div>
-                <h2>Stop lose & Take Profit</h2>
-                <p>Biz bir necha kun davomida aktivning o'zgaruvchanligini tahlil qilib, foydani ko'paytirish va
-                    yo'qotishlarni minimallashtirish uchun Stop Loss va ko'p darajali Take profit hajmini hisoblab
-                    chiqamiz.</p>
-            </div>
-            <div class="cards">
-                <div class="mcard"><img src="./images/291.png" alt="Ozgaruvchanlik"></div>
-                <h2>O'zgaruvchanlik</h2>
-                <p>Biz aktivni tahlil qilib va o'zgaruvchanlikni foiz va ballarda ko'rsatib beramiz.</p>
-            </div>
-            <div class="cards">
-                <div class="mcard"><img src="./images/292.png" alt="Kelgusi darajalar"></div>
-                <h2>Kelgusi darajalar</h2>
-                <p>Biz aktivni tahlil qilib va 500 sham ichida keyingi ikki narx darajasini aniqlab beramiz.</p>
-            </div>
-            <div class="cards">
-                <div class="mcard"><img src="./images/293.png" alt="Tezkor Malumot"></div>
-                <h2>Tezkor ma'lumot</h2>
-                <p>Aktivning narxini dollar va bitkoinlarda ko'rsatamiz.</p>
-            </div>
+      
+                <div class="cardd">
+                    <h2>Bizning <br> imkoniyatlarimiz</h2>
+                    <div class="cards">
+                        <div class="mcard"><img src="./images/Group 289.png" alt="Trend"></div>
+                        <h2>Trendlarni ko'rsatamiz</h2>
+                        <p>Biz sizga aktivni tahlil qilib beramiz va bir necha taymfreymlarda savdo yo'nalishi bo'yicha
+                            tavsiyalar
+                            beramiz.</p>
+                    </div>
+                    <div class="cards">
+                        <div class="mcard"><img src="./images/Group 290.png" alt="Stop Loss va Take Profit"></div>
+                        <h2>Stop lose & Take Profit</h2>
+                        <p>Biz bir necha kun davomida aktivning o'zgaruvchanligini tahlil qilib, foydani ko'paytirish va
+                            yo'qotishlarni minimallashtirish uchun Stop Loss va ko'p darajali Take profit hajmini hisoblab
+                            chiqamiz.</p>
+                    </div>
+                    <div class="cards">
+                        <div class="mcard"><img src="./images/291.png" alt="Ozgaruvchanlik"></div>
+                        <h2>O'zgaruvchanlik</h2>
+                        <p>Biz aktivni tahlil qilib va o'zgaruvchanlikni foiz va ballarda ko'rsatib beramiz.</p>
+                    </div>
+                    <div class="cards">
+                        <div class="mcard"><img src="./images/292.png" alt="Kelgusi darajalar"></div>
+                        <h2>Kelgusi darajalar</h2>
+                        <p>Biz aktivni tahlil qilib va 500 sham ichida keyingi ikki narx darajasini aniqlab beramiz.</p>
+                    </div>
+                    <div class="cards">
+                        <div class="mcard"><img src="./images/293.png" alt="Tezkor Malumot"></div>
+                        <h2>Tezkor ma'lumot</h2>
+                        <p>Aktivning narxini dollar va bitkoinlarda ko'rsatamiz.</p>
+                    </div>
+                </div>
         </div>
     </div>
 </body>
